--- a/templates/superadmin/quotation/show.html.twig
+++ b/templates/superadmin/quotation/show.html.twig
@@ -3,9 +3,8 @@
 {% block title %}Détails de la citation
 {% endblock %}
 
-{% block page_content %}
+{% block body %}
 <h1>Détails du devis</h1>
-
 <table class="table">
 	<thead>
 		<th>Id</th>
@@ -54,42 +53,8 @@
 			<td>{{quotation.baseVatRate20}}</td>
 			<td>{{quotation.baseVatRate0}}</td>
 		</tr>
-		<td>
-			{# <button id="generate-invoice-btn" class="btn btn-primary">Générer la facture associée au devis</button> #}
-			<a href="{{ path('front_quotation_generate_invoice', {'id': quotation.id}) }}" class="btn btn-primary">Générer la facture associée au devis</a>
-		</td>
 	</tbody>
-</table>
-
-
-{% block javascript %}
-
-	<script>
-		document.addEventListener('DOMContentLoaded', function () {
-const generateInvoiceBtn = document.getElementById('generate-invoice-btn');
-generateInvoiceBtn.addEventListener('click', function () {
-const quotationId = {{ quotation.id }};
-generateInvoice(quotationId);
-});
-
-function generateInvoice(quotationId) { // Envoie d'une requête AJAX pour générer la facture
-fetch (`/quotation/generate-invoice/${quotationId}`, {
-method: 'GET',
-headers: {
-'Content-Type': 'application/json'
-}
-}).then(response => {
-if (response.ok) {
-return response.json();
-}
-}).then(data => console.log(data)).catch(error => {
-console.error('Erreur lors de la génération de PDF:', error);
-});
-}
-});
-	</script>
-
-{% endblock %}</br>{% if previousVersions %}
+</table></br>{% if previousVersions %}
 <h2>Version précédentes:</h2>
 <table class="table">
 	<thead>
@@ -133,8 +98,8 @@ console.error('Erreur lors de la génération de PDF:', error);
 					{% endif %}
 				</td>
 				<td>
-					<a href="{{ path('user_quotation_show', {'id': previousVersion.id}) }}">show</a>
-					<a href="{{ path('user_quotation_edit', {'id': previousVersion.id}) }}">edit</a>
+					<a href="{{ path('superadmin_quotation_show', {'id': previousVersion.id}) }}">show</a>
+					<a href="{{ path('superadmin_quotation_edit', {'id': previousVersion.id}) }}">edit</a>
 				</td>
 			</tr>
 		{% endfor %}
@@ -181,9 +146,9 @@ console.error('Erreur lors de la génération de PDF:', error);
 				{% endif %}
 			</td>
 			<td>
-				<a href="{{ path('user_quotation_show', {'id': nextVersion.id}) }}">show</a>
-				<a href="{{ path('user_quotation_edit', {'id': nextVersion.id}) }}">edit</a>
+				<a href="{{ path('superadmin_quotation_show', {'id': nextVersion.id}) }}">show</a>
+				<a href="{{ path('superadmin_quotation_edit', {'id': nextVersion.id}) }}">edit</a>
 			</td>
 		</tr>
 	{% endfor %}
-</tbody></table></br>{% endif %}<a href="{{ path('user_quotation_index') }}" class="btn btn-secondary">Retour à la liste</a></br><a href="{{ path('user_quotation_edit', {'id': quotation.id}) }}" class="btn btn-primary">Modifier</a></br>{{ include('user/quotation/_delete_form.html.twig') }}{% endblock %}
+</tbody></table></br>{% endif %}<a href="{{ path('superadmin_quotation_index') }}" class="btn btn-secondary">Retour à la liste</a></br><a href="{{ path('superadmin_quotation_edit', {'id': quotation.id}) }}" class="btn btn-primary">Modifier</a></br>{{ include('superadmin/quotation/_delete_form.html.twig') }}{% endblock %}
